# agl-anonymizer

./: .gitignore
agl-anonymizer/: .envrc  flake.nix  pyproject.toml  result
agl-anonymizer/.direnv/: flake-profile  flake-profile-10-link  flake-profile-11-link  flake-profile-22-link  flake-profile-5-link
agl-anonymizer/.direnv/python-3.11/: pyvenv.cfg
agl-anonymizer/agl-anonymizer-api/: manage.py
agl-anonymizer/agl-anonymizer-api/.direnv/: flake-profile-1-link
agl-anonymizer/agl-anonymizer-api/agl-anonymizer-api/: settings.py  urls.py  wsgi.py
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/: views.py
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/agl-anonymizer/: flake.nix
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/agl-anonymizer/agl_anonymizer/: main.py
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/agl_anonymizer/: flake.nix  pyproject.toml
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/agl_anonymizer/.direnv/: flake-profile-6-link
agl-anonymizer/agl-anonymizer-api/agl_anonymizer/agl_anonymizer/agl_anonymizer/: box_operations.py  (+2 more)
agl-anonymizer/agl-anonymizer-api/api/: views.py
agl_anonymizer/: .gitignore  README.md  flake.nix  manage.py  pyproject.toml
agl_anonymizer/.direnv/: flake-profile-10-link  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-3-link  flake-profile-9-link
agl_anonymizer/agl_anonymizer/: settings.py  urls.py  views.py  wsgi.py
agl_anonymizer/agl_anonymizer/agl_anonymizer/: apps.py  settings.py  urls.py  views.py  wsgi.py
agl_anonymizer/templates/: index.html
(+34 files in other folders)
